grammar.js
        fragment: $ => repeat(choice(
            $.fragment_expression,
            $.fragment_statement,
            $.fragment_comment,
        )),
        expression: $ => choice(
            $.comparison_operator,
            $.test_operator,
            $.not_operator,
            $.boolean_operator,
            $.primary_expression,
            $.conditional_expression,
        ),

        binary_operator: $ => {
            const table = [
                [prec.left, '+', PREC.plus],
                [prec.left, '-', PREC.plus],
                [prec.left, '*', PREC.times],
                [prec.left, '/', PREC.times],
                [prec.left, '%', PREC.times],
                [prec.left, '//', PREC.times],
                // This is left-associative in jinja for some reason.
                [prec.left, '**', PREC.power],
            ];

            // @ts-ignore
            return choice(...table.map(([fn, operator, precedence]) => fn(precedence, seq(
                field('left', $.primary_expression),
                // @ts-ignore
                field('operator', operator),
                field('right', $.primary_expression),
            ))));
        },
        // This is the filter ('|') operator.  It's right-associative
        // because filters are applied from left to right.
        keyword_argument: $ => seq(
            field('name', $.identifier),
            '=',
            field('value', $.expression),
        ),

        // Literals

        integer: _ => token(choice(
            seq(
                choice('0x', '0X'),
                repeat1(/_?[A-Fa-f0-9]+/),
                optional(/[Ll]/),
            ),
            seq(
                choice('0o', '0O'),
                repeat1(/_?[0-7]+/),
                optional(/[Ll]/),
            ),
            seq(
                choice('0b', '0B'),
                repeat1(/_?[0-1]+/),
                optional(/[Ll]/),
            ),
            seq(
                repeat1(/[0-9]+_?/),
                choice(
                    optional(/[Ll]/), // long numbers
                    optional(/[jJ]/), // complex numbers
                ),
            ),
        )),

        identifier: _ => /[_\p{XID_Start}][_\p{XID_Continue}]*/,

        fragment_expression: $ => seq('{',
            choice($.trim_open_expression, $.open_expression),
            $.expression,
            choice($.trim_close_expression, $.close_expression),
            '}'
        ),
        //// Statement
        _open_statement: $ => ensureAliased('{%','{%'),
        _close_statement: $ => ensureAliased('%}','%}'),
        fragment_statement: $ => choice(
            seq(
                choice($.trim_open_statement, $._open_statement),
                $.statement,
                choice($.trim_close_statement, $._close_statement),
            ),
        ),
        statement: $ => choice(
            $._import_statement,
            $._loop_statement,
            $._if_statement,
            $._macro_statement,
            $._call_statement,
            $._set_statement,
            $._block_statement,
            $._filter_statement,
            $.include_statement,
            $.extends_statement,
            $._with_statement,
            $._trans_statement,
            $.do_statement,
            $._autoescape_statement,
            $._raw_statement,
            $._generic_statement,
        ),
        // Generic statement calls that some third-party plugins inject into Jinja2. Try and support them also.
        _generic_statement: $ => seq(
            $.identifier,
            optional(commaSep1(choice($.keyword_argument, $.expression))),
        ),
        // Filter,
        _filter_statement: $ => choice(
            $.filter_statement,
            $.endfilter_statement,
        ),
        _raw_statement: $ => choice(
            $.raw_statement,
            $.endraw_statement,
        ),
        _autoescape_statement: $ => choice(
            $.autoescape_statement,
            $.endautoescape_statement,
        ),
        do_statement: $ => seq(
            'do',
            $.expression,
        ),
        // With
        _with_statement: $ => choice(
            $.with_statement,
            $.endwith_statement,
        ),
        _trans_statement: $ => choice(
            $.trans_statement,
            $.endtrans_statement,
            $.pluralize_statement,
        ),
        _set_statement: $ => choice(
            $.set_statement,
            $.endset_statement,
        ),
        _macro_statement: $ => choice(
            $.macro_statement,
            $.endmacro_statement,
        ),
        _call_statement: $ => choice(
            $.call_statement,
            $.callback_statement,
            $.endcall_statement,
        ),
        _if_statement: $ => choice(
            $.if_statement,
            $.elif_statement,
            $.else_statement,
            $.endif_statement,
        ),
        _loop_statement: $ => choice(
            $.for_statement,
            $.else_statement,
            $.endfor_statement,
            $.break_statement,
            $.continue_statement,
        ),
        _import_statement: $ => seq(
            choice(
                $.import_from_statement,
                $.import_statement,
            ),
            optional($._context)),

        // Simple import statement
        _block_statement: $ => choice(
            $.block_statement,
            $.endblock_statement,
        ),
