test/corpus/do.txt

==============
 Do statement
==============

{% do 1 + 1 %}

---

(fragment
      (fragment_statement
        (statement
          (do_statement
            (expression
              (binary_operator
                (integer)
                (integer)))))))
